@@ -1,0 +1,28 @@
+matrix2vector.phyDat <- function(x) {
+    res <- lapply(x, matrix2vector.phyDat.item)
+    names(res) <- names(x)
+    class(res) <- "phyDat"
+    return(res)
+}
+
+matrix2vector.phyDat.item <- function(y) {
+    ii <- apply(y, 1, function(xx) {
+        ## return index of a c g and t, if it has highest probability
+        ## otherwise return index of -
+        jj <- which(xx == max(xx))
+        if ( length(jj) > 1) {
+            if (length(jj) < 4) {
+                warning("ambiguous found...\n")
+            } else {
+                ## cat("insertion found...\n")
+            }
+            ## 18 is the gap(-) index of base character defined in phangorn
+            ## c("a", "c", "g", "t", "u", "m", "r", "w", "s", 
+	    ##   "y", "k", "v", "h", "d", "b", "n", "?", "-")
+            18
+        } else {
+            jj
+        }
+    })
+    unlist(ii)
+}
