@@ -4,6 +4,7 @@ CHANGES IN VERSION 1.2.2
    + main function of annotating tree
    + netNglyc related functions
  o add man files of tree annotation functions <2014-11-21, Fri>
+ o matrix2vector.phyDat: convert phyDat object from matrix to vector format <2014-11-21, Fri>
  
 CHANGES IN VERSION 1.2.0
 ------------------------
